Atualização do projeto

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -24,3 +24,19 @@
 .container_imagem{
     padding: 1em;
 }
+
+.lista-menu{
+    display: none ;
+     position: absolute;
+     top:100%;
+}
+
+.container__botao:checked ~ .lista-menu{ 
+    display: block;
+}
+
+.lista-menu__titulo,
+.lista-menu__item {
+    padding: 1em;
+    background-color: var(--cor-navebar)
+}
