--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,5 @@
+
+
 .cabecario__menu_hamburguer{
     width: 50px;
     height: 24px;
@@ -29,6 +31,7 @@
     display: none ;
      position: absolute;
      top:100%;
+     width: 60vw ;
 }
 
 .container__botao:checked ~ .lista-menu{ 
@@ -39,4 +42,21 @@
 .lista-menu__item {
     padding: 1em;
     background-color: var(--cor-navebar)
+}
+
+.lista-menu__titulo{
+    color: var(--cor-laranja);
+    font-size: 700;
+}
+
+.lista-menu__link{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-transform: uppercase ;
+}
+
+.container__botao{
+    display: none;
 }
