--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,24 @@
 @import url("/assets/css/header.css");
+@import url("/assets/css/banner.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
     --cor-primaria: #002f52;
     --cor-secundaria: #326589;
-    --cor-terciaria: #ed9b00;
+    --cor-laranja: #ed9b00;
     --cor-navebar: #ffffff;
     --cor-fundo: #ebecee;
     --cor-footer: #f9f9f9;
-
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-primaria: 'poppins', sans-serif;
     }
 
-      
-     
 
       body{
-        font-family: var(--fonte-primaria);
         margin: 0px;
         padding: 0px;
         background-color: var(--cor-fundo);
+        font-family: var(--fonte-primaria);
+        font-size: 16px;
+        font-weight: 400;
       }
