--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 @import url("/assets/css/header.css");
 @import url("/assets/css/banner.css");
+@import url("/assets/css/carrossel.css");
+@import url("/assets/css/topicos.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
@@ -7,7 +9,7 @@
     --cor-secundaria: #326589;
     --cor-laranja: #ed9b00;
     --cor-navebar: #ffffff;
-    --cor-fundo: #ebecee;
+    --cor-fundo: #EBECEE;
     --cor-footer: #f9f9f9;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-primaria: 'poppins', sans-serif;
