Atualização do projeto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,8 @@
 @import url("/assets/css/banner.css");
 @import url("/assets/css/carrossel.css");
 @import url("/assets/css/topicos.css");
+@import url("/assets/css/nesletter.css");
+@import url("/assets/css/footer.css");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
