--- a/assets/css/nesletter.css
+++ b/assets/css/nesletter.css
@@ -1,39 +1,57 @@
-.newsletter{
+.newsletter {
     background-color: var(--cor-navebar);
     padding: 1em;
 }
 
 .newsleter__titulo,
-.newsletter__text{
+.newsletter__text {
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
 
-.newsleter__titulo{
+.newsleter__titulo {
     font-size: 18px;
     font-weight: 500;
 }
 
-.newsletter__text{
+.newsletter__text {
     font-weight: 300;
     padding: 1em 0;
 }
 
 
-.newletter__email{
+.newletter__email {
     border: 1px solid #002f52;
     border-radius: 24px;
     width: 90%;
     padding: 1em;
     color: #002f52;
-    
+
 }
 
-.newletter__email::placeholder{
+.newletter__email::placeholder {
     font-family: #002f52;
     color: var(--fonte-primaria);
-    background: url(/assets/img/Email.svg) no-repeat; 
+    background: url(/assets/img/Email.svg) no-repeat;
     padding: 0 2em;
+}
+
+@media screen and (min-width:1024px) {
+    .newsleter__titulo{
+        font-size: 24px;
+    }
+    .newsletter{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .newsletter__descricao{
+        margin-right: 1em;
+        width: 30%;
+    }
+    .newletter__email{
+        width: 30%;
+    }
 }
