--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -64,6 +64,9 @@
     display: none;
 }
 
+.container__text{
+    display: none ;
+}
 
 
 @media screen and (min-width: 1024px) {
@@ -112,5 +115,20 @@
 
     .opcoes__botao{
         display: none;
+    }
+}
+
+
+@media screen and (min-width: 1728px) {
+    .cabecalho{
+        padding: 0 2em;
+    }
+
+    .opcoes{
+        margin-right: auto;
+    }
+    
+    .container__text{
+        display: block;
     }
 }
