--- a/assets/css/carrossel.css
+++ b/assets/css/carrossel.css
@@ -106,3 +106,31 @@
         margin: 2em auto;
     }
 }
+
+@media screen and (min-width: 1728px) {
+    .carrossel__container{
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+    }
+    .swiper-pagination {
+        margin: 1em 0;
+    }
+    .swiper {
+        width: 50%;
+    }
+    .descicao__titulo {
+      font-size: 28px;
+    }
+    .descricao__texto {
+        font-size: 16px;
+    }
+    .descrição{
+        margin-right: 2em;
+    }
+
+    .card{
+        width: 60%;
+        margin-left: 3em;
+    }
+}
