--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -40,3 +40,14 @@ footer{
         font-size: 24px;
     }
 }
+
+@media screen and (min-width:1728px) {
+    .lista-rodape{
+        border-left: 1px solid var(--light-grey);
+        padding-left: 1em;
+    }
+    .footer{
+        padding: 3em 0;
+    }   
+
+}
