--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -7,6 +7,13 @@
     display: inline-block;
 }
 
+.container__botao:checked ~ .container__rotulo > .cabecario__menu_hamburguer{
+    background-image: url(/assets/img/alurabooks-menu-branco.png);
+}
+
+.container__botao:checked ~ .container__rotulo{
+    background: var(--azul-degrade) ;
+}
 
 .cabecalho {
     background-color: var(--cor-navebar);
@@ -68,6 +75,14 @@
     display: none ;
 }
 
+.lista-menu__item:hover{
+    background: var(--azul-degrade) ;
+}
+
+.lista-menu__item:hover > .lista-menu__link{
+    -webkit-text-fill-color: var(--cor-navebar) ;
+    text-decoration: none;
+}
 
 @media screen and (min-width: 1024px) {
 
@@ -97,6 +112,16 @@
         text-transform: uppercase;
         
     }
+
+    .opcoes__botao:checked ~ .opcoes__rotulo > .opcoes__item{
+        background: var(--azul-degrade);
+        color: var(--cor-navebar);
+    }
+    
+    .opcoes__item{
+        padding: 2em 1em ;
+    }
+
 
     .opcoes__link{
         text-decoration: none;
